fixed tools knob spacing issue

--- a/src/Components/ToolsKnob.css
+++ b/src/Components/ToolsKnob.css
@@ -49,56 +49,56 @@
 
 .knob__label--0 {
   position: relative;
-  top: 220px;
+  top: 235px;
   left: 0px;
 }
 .knob__label--1 {
   position: relative;
-  top: 220px;
+  top: 235px;
   left: -90px;
 }
 .knob__label--2 {
   position: relative;
-  top: 250px;
+  top: 265px;
   left: -110px;
 }
 .knob__label--3 {
   position: relative;
-  top: 290px;
+  top: 295px;
   left: -125px;
 }
 .knob__label--4 {
   position: relative;
-  top: 315px;
+  top: 325px;
   left: -115px;
 }
 .knob__label--5 {
   position: relative;
-  top: 335px;
+  top: 340px;
   left: -40px;
 }
 .knob__label--6 {
   position: relative;
-  top: 304px;
+  top: 309px;
   left: 50px;
 }
 .knob__label--7 {
   position: relative;
-  top: 240px;
+  top: 245px;
   left: 125px;
 }
 .knob__label--8 {
   position: relative;
-  top: 170px;
+  top: 175px;
   left: 140px;
 }
 .knob__label--9 {
   position: relative;
-  top: 100px;
+  top: 110px;
   left: 130px;
 }
 .knob__label--10 {
   position: relative;
-  top: 30px;
+  top: 35px;
   left: 90px;
 }
